--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,11 @@ numpy>=1.12.1
 scipy>=0.18.1
 six
 psutil
-pynisher>=0.4.1
 ConfigSpace>=0.4.3,<0.5
-scikit-learn>=0.18.0
+scikit-learn==0.21.3
 typing
 pyrfr>=0.5.0
-sphinx
-sphinx_rtd_theme
 joblib
 
-george==0.2.1
-robo
-smac
 matplotlib
 seaborn
