--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ typing
 
 numpy>=1.12.1
 scipy>=0.18.1
-ConfigSpace>=0.4.3,<0.5
-scikit-learn==0.21.3
-pyrfr>=0.5.0
+ConfigSpace==0.4.12
+scikit-learn==0.21.8
+pyrfr==0.8.0
